--- a/inst/doc/PICS.Rnw
+++ b/inst/doc/PICS.Rnw
@@ -115,7 +115,8 @@ map<-as(map,"GRanges")
 \subsection{Genome segmentation}
 We segment the genome into candidate regions by pre-processing bidirectional aligned reads data from a single ChIP-Seq experiment to detect candidate regions with a minimum number of forward and reverse reads. These candidate regions will then be processed by PICS. The `minReads' parameter will heavily influence the number of candidate regions returned. In principle, it is better to use a small value for `minReads' in order not to miss any true binding sites. However, a value too small will likely return many false positive regions, which can result a longer computing time for the \texttt{PICS} function.  If a control sample is available you may also chose a value of `minReads' that would give you a ratio of the number of candidate regions in the control over the number of candidate regions in the IP of about 25\%. A ratio larger than 25\% would most likely result in a large FDR when using \texttt{picsFDR}, and therefore it is not necessary to use too low of a threshold. See below for an illustration.  \newline
 
-In order to improve the computational efficiency of the PICS package, we recommend the utilisation of the \texttt{parallel} package, which allows for easy parallel computations. In what follows, we assume that \texttt{parallel} is installed on your machine. If not, you could omit the first line, which will lead a serial execution. By default the command is not run, so you're safe. Note that the \texttt{segmentPICS} and \texttt{PICS} functions, will automatically detect whether you have initialized a cluster and if yes it will use it. 
+In order to improve the computational efficiency of the PICS package, we recommend the utilisation of the \texttt{parallel} package, which allows for easy parallel computations. In what follows, we assume that \texttt{parallel} is installed on your machine and you have at least two cores. If not, you could omit the first line and the argument `nCores', and calculations will occur on a single CPU.
+By default the function will use only one core.
 
 <<Cluster initialization>>=
 library(parallel)
@@ -130,7 +131,7 @@ seg<-segmentPICS(dataIP, dataC=dataCont, map=map, minReads=1)
 After having segmented the genome into candidate regions, we use the \texttt{PICS} function to detect binding regions in a probabilistic way, and returns binding site estimates, confidence intervals, etc. In the code below, we assume that you are processing transcription factor data, as specified with the `dataType' option set to `TF' for transcription factor. We also plan to support histone modification data in a future release of PICS, which will be turned on by specifying `dataType=`H'. In our case, assuming that we have already segmented the genome using \texttt{segmentPICS}, we can proceed with the following command, 
 
 <<PICS analysis>>=
-pics<-PICS(seg)
+pics<-PICS(seg, nCores=2)
 @
 
 \subsection{FDR estimation}
